# crrao-students-website

./: LICENSE  README.md  app.py  config_firebase.py  pyproject.toml
template/: about.html  home.html  jason-file.json  logged.html  student.html  students.html
