[tool.poetry]
name = "repl-nix-crrao-students-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_crrao_students_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
